# hush

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: prerelease.yml
exp/: 1gbps.sh  bad-lte.sh
hush/: Cargo.toml
hush-core/: Cargo.toml
hush-core/src/: auth.rs  config.rs  congestion.rs  defaults.rs  endpoint.rs  filecopy.rs  forwarding.rs  lib.rs  net.rs  os.rs  paths.rs  priority.rs  protocol.rs  resource.rs  session.rs  tls.rs  transport.rs
hush-server/: Cargo.toml
hush-server/src/: cli.rs  logging.rs  main.rs  runtime.rs
hush/src/: cli.rs  cp.rs  logging.rs  main.rs  net.rs  os.rs  session.rs
hush/tests/: smoke.rs
scripts/: dev.kdrag0n.hush.plist  hush.openwrt.init  hush.service  install-server.sh
