[workspace]
members = ["hush-core", "hush", "hush-server"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/hush"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.16.1"
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
libc = "0.2.177"
postcard = { version = "1.1.3", features = ["alloc"] }
quinn = "0.11.9"
quinn-proto = "0.11.14"
rcgen = "0.14.7"
rpassword = "7.4.0"
rustls = { version = "0.23.40", features = ["aws-lc-rs"] }
rustls-pki-types = "1.13.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
shell-words = "1.1.0"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption", "std"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
whoami = "1.6.1"
x509-parser = "0.18.0"
