[workspace]
members = ["hush-core", "hush", "hush-server"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/hush"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
libc = "0.2.177"
postcard = { version = "1.1.3", features = ["alloc"] }
quinn = { version = "0.11.9", default-features = false, features = [
    "bloom",
    "log",
    "platform-verifier",
    "runtime-tokio",
    "rustls-aws-lc-rs",
] }
quinn-proto = { version = "0.11.14", default-features = false, features = [
    "bloom",
    "log",
    "platform-verifier",
    "rustls-aws-lc-rs",
] }
rcgen = { version = "0.14.7", default-features = false, features = ["aws_lc_rs", "pem"] }
rpassword = "7.4.0"
rustls = { version = "0.23.40", features = ["aws-lc-rs"] }
rustls-pki-types = "1.13.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
shell-words = "1.1.0"
ssh-agent-client-rs = "1.1.2"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption", "std"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
x509-parser = "0.18.0"
xdg = "3.0.0"
