[workspace]
members = ["hush-core", "hush", "hush-server"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/hush"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
kcp-tokio = "0.5.0"
libc = "0.2.177"
postcard = { version = "1.1.3", features = ["alloc"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
shell-words = "1.1.0"
signature = "2.2.0"
snow = "0.10.0"
ssh-agent-client-rs = "1.1.2"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption", "std"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
xdg = "3.0.0"
