[package]
name = "hush-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
libc.workspace = true
postcard.workspace = true
quinn.workspace = true
quinn-proto.workspace = true
rcgen.workspace = true
rpassword.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
sha2.workspace = true
shell-words.workspace = true
ssh-agent-client-rs.workspace = true
ssh-key.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
x509-parser.workspace = true
xdg.workspace = true
