[package]
name = "hush-server"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hush-core = { path = "../hush-core" }
ssh-key.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
