[package]
name = "hush"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
console.workspace = true
hush-core = { path = "../hush-core" }
libc.workspace = true
quinn.workspace = true
rustls.workspace = true
shell-words.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
